force-app/main/default/objects/Quote/fields/AFPPerent__c.field-meta.xml
<CustomField>
    <fullName>AFPPerent__c</fullName>
    <label>AFP %</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>