force-app/main/default/objects/Quote/fields/Bank_A_C__c.field-meta.xml
<CustomField>
    <fullName>Bank_A_C__c</fullName>
    <label>Bank A/C</label>
    <length>18</length>
    <type>Text</type>
</CustomField>