force-app/main/default/objects/Quote/fields/Bank_Details__c.field-meta.xml
<CustomField>
    <fullName>Bank_Details__c</fullName>
    <label>Bank Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>