force-app/main/default/objects/Quote/fields/Benificiary_Details__c.field-meta.xml
<CustomField>
    <fullName>Benificiary_Details__c</fullName>
    <label>Benificiary Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>