force-app/main/default/objects/Quote/fields/BG_Verified__c.field-meta.xml
<CustomField>
    <fullName>BG_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BG Verified</label>
    <type>Checkbox</type>
</CustomField>