force-app/main/default/objects/Quote/fields/Brand_Change_Note__c.field-meta.xml
<CustomField>
    <fullName>Brand_Change_Note__c</fullName>
    <defaultValue>&quot;If a component in the requested brand is unavailable an equivalent component from another brand which meets the relevent standards will be used instead&quot;</defaultValue>
    <label>Brand Change Note</label>
    <length>90000</length>
    <type>LongTextArea</type>
</CustomField>