force-app/main/default/objects/Quote/fields/Change_Quote_Owner__c.field-meta.xml
<CustomField>
    <fullName>Change_Quote_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Change Quote Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>