force-app/main/default/objects/Quote/fields/CR_default_image__c.field-meta.xml
<CustomField>
    <fullName>CR_default_image__c</fullName>
    <formula>IMAGE(&quot;/servlet/servlet.FileDownload?file=0151m000000ZzJe&quot;, &quot; oo&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CR default image</label>
    <type>Text</type>
</CustomField>