force-app/main/default/objects/Quote/fields/CR_default_value__c.field-meta.xml
<CustomField>
    <fullName>CR_default_value__c</fullName>
    <defaultValue>true</defaultValue>
    <label>CR default value</label>
    <type>Checkbox</type>
</CustomField>