force-app/main/default/objects/Quote/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <formula>Contact.FirstName &amp; &quot; &quot; &amp; Contact.LastName</formula>
    <label>Customer Name</label>
    <type>Text</type>
</CustomField>