force-app/main/default/objects/Quote/fields/Customer_Quote_Update__c.field-meta.xml
<CustomField>
    <fullName>Customer_Quote_Update__c</fullName>
    <description>If the customer accepts or rejects the respective quote</description>
    <label>Customer Quote Update</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agree</fullName>
            </value>
            <value>
                <fullName>DisAgree</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>