force-app/main/default/objects/Quote/fields/Customer_Quote_Updation__c.field-meta.xml
<CustomField>
    <fullName>Customer_Quote_Updation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Quote Updation</label>
    <type>Checkbox</type>
</CustomField>