force-app/main/default/objects/Quote/fields/Customer_Response__c.field-meta.xml
<CustomField>
    <fullName>Customer_Response__c</fullName>
    <label>Customer Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>