force-app/main/default/objects/Quote/fields/Delivery__c.field-meta.xml
<CustomField>
    <fullName>Delivery__c</fullName>
    <label>Delivery</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>(Ex-works) 8-12 weeks after drawings confirmation</fullName>
            </value>
            <value>
                <fullName>Ex-Stock Prior to Sale</fullName>
            </value>
            <value>
                <fullName>(Ex-Works)4-5 weeks from sale</fullName>
            </value>
            <value>
                <fullName>(Ex-works) 4 working Days after drawings confirmation</fullName>
            </value>
            <value>
                <fullName>(Ex-works) 5 working Days after drawings confirmation</fullName>
            </value>
            <value>
                <fullName>(Ex-works) 7 working Days after drawings confirmation</fullName>
            </value>
            <value>
                <fullName>(Ex-works) 10 working Days after drawings confirmation</fullName>
            </value>
            <value>
                <fullName>(Ex-works) 1-2 weeks after drawings confirmation</fullName>
            </value>
            <value>
                <fullName>(Ex-works) 2-3 weeks after drawings confirmation</fullName>
            </value>
            <value>
                <fullName>(Ex-works) 6-8 weeks after drawings confirmation</fullName>
            </value>
            <value>
                <fullName>(Ex-works) 2-4 weeks after drawings confirmation</fullName>
            </value>
            <value>
                <fullName>(Ex-works) 4-6 working Days after drawings confirmation</fullName>
            </value>
            <value>
                <fullName>(Ex-works) 4-6 weeks after drawings confirmation</fullName>
            </value>
            <value>
                <fullName>(Ex-Works) 2-3 Working Days after drawings confirmation 14 Working Days after drawings confirmation</fullName>
            </value>
            <value>
                <fullName>(Ex-works) 4-6 Months after drawings confirmation</fullName>
            </value>
            <value>
                <fullName>(Ex-works) 3-4 Months after drawings confirmation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>