force-app/main/default/objects/Quote/fields/Discounted_Price__c.field-meta.xml
<CustomField>
    <fullName>Discounted_Price__c</fullName>
    <formula>Rep_Discount__c * Products_Price_with_Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discounted Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>