force-app/main/default/objects/Quote/fields/Discounted_Price_For_I_H__c.field-meta.xml
<CustomField>
    <fullName>Discounted_Price_For_I_H__c</fullName>
    <formula>Rep_Discount__c * Grand_Total_with_Qty_VAT_I_H__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discounted Price For (I.H.)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>