force-app/main/default/objects/Quote/fields/Final_Grand_Price__c.field-meta.xml
<CustomField>
    <fullName>Final_Grand_Price__c</fullName>
    <formula>(  Final_Total_Price__c  + Vat_Amount__c+  ShippingHandling )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Grand Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>