force-app/main/default/objects/Quote/fields/Final_Rep_Discount__c.field-meta.xml
<CustomField>
    <fullName>Final_Rep_Discount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Final Rep Discount</label>
    <type>Checkbox</type>
</CustomField>