force-app/main/default/objects/Quote/fields/Final_SubTotal__c.field-meta.xml
<CustomField>
    <fullName>Final_SubTotal__c</fullName>
    <formula>( Subtotal )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final SubTotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>