force-app/main/default/objects/Quote/fields/Final_Total_Price__c.field-meta.xml
<CustomField>
    <fullName>Final_Total_Price__c</fullName>
    <formula>Final_SubTotal__c - Runner_Discount_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>