force-app/main/default/objects/Quote/fields/Final_Total_Price_with_VAT__c.field-meta.xml
<CustomField>
    <fullName>Final_Total_Price_with_VAT__c</fullName>
    <formula>Final_Total_Price__c +  VAT_Amount_R__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Total Price with VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>