force-app/main/default/objects/Quote/fields/Grand_Total_price_with_VAT__c.field-meta.xml
<CustomField>
    <fullName>Grand_Total_price_with_VAT__c</fullName>
    <formula>Vat_Amount__c +   Products_Price_with_Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grand Total price with VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>