force-app/main/default/objects/Quote/fields/Grand_total_price_with_VAT_Discount__c.field-meta.xml
<CustomField>
    <fullName>Grand_total_price_with_VAT_Discount__c</fullName>
    <formula>Product_Price_With_Discount__c + Vat_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grand total price with VAT &amp; Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>