force-app/main/default/objects/Quote/fields/Grand_Total_price_without_VAT__c.field-meta.xml
<CustomField>
    <fullName>Grand_Total_price_without_VAT__c</fullName>
    <formula>Price__c + SSL_Amount__c + NBT_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grand Total price without VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>