force-app/main/default/objects/Quote/fields/Grand_Total_with_Discount_for_I_H__c.field-meta.xml
<CustomField>
    <fullName>Grand_Total_with_Discount_for_I_H__c</fullName>
    <formula>Grand_Total_with_Qty_VAT_I_H__c - Discounted_Price_For_I_H__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grand Total with Discount for (I.H.)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>