force-app/main/default/objects/Quote/fields/Grand_Total_with_Discount_VAT__c.field-meta.xml
<CustomField>
    <fullName>Grand_Total_with_Discount_VAT__c</fullName>
    <formula>Grand_Total_price_with_VAT__c -  Discount_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grand Total with Discount &amp; VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>