force-app/main/default/objects/Quote/fields/Grand_Total_with_Qty_VAT_I_H__c.field-meta.xml
<CustomField>
    <fullName>Grand_Total_with_Qty_VAT_I_H__c</fullName>
    <label>Grand Total with Qty &amp; VAT - (I.H.)</label>
    <summarizedField>QuoteLineItem.Final_Bundle_Price_with_VAT_Quantity__c</summarizedField>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>