force-app/main/default/objects/Quote/fields/NBT_Amount__c.field-meta.xml
<CustomField>
    <fullName>NBT_Amount__c</fullName>
    <formula>Price__c *  NBT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NBT Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>