force-app/main/default/objects/Quote/fields/Opportunity_quote__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_quote__c</fullName>
    <label>Opportunity quote</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Runner</fullName>
            </value>
            <value>
                <fullName>Repeater</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>