force-app/main/default/objects/Quote/fields/Orl_Opportunity_record_type__c.field-meta.xml
<CustomField>
    <fullName>Orl_Opportunity_record_type__c</fullName>
    <formula>Opportunity.RecordType.Name</formula>
    <label>Opportunity record type</label>
    <type>Text</type>
</CustomField>