force-app/main/default/objects/Quote/fields/Orl_Opporutnity_Id__c.field-meta.xml
<CustomField>
    <fullName>Orl_Opporutnity_Id__c</fullName>
    <formula>OpportunityId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opporutnity Id</label>
    <type>Text</type>
</CustomField>