force-app/main/default/objects/Quote/fields/Orl_Quote_Revision_Asked__c.field-meta.xml
<CustomField>
    <fullName>Orl_Quote_Revision_Asked__c</fullName>
    <formula>IF(ISPICKVAL(Orl_Approval_Status__c, &apos;Rejected&apos;), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Revision Asked</label>
    <type>Checkbox</type>
</CustomField>