force-app/main/default/objects/Quote/fields/Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms__c</fullName>
    <label>Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>60% Advance balance before delivery</fullName>
            </value>
            <value>
                <fullName>Cash on Delivery</fullName>
            </value>
            <value>
                <fullName>30 Days Credit</fullName>
            </value>
            <value>
                <fullName>CASH</fullName>
            </value>
            <value>
                <fullName>60 Days Credit</fullName>
            </value>
            <value>
                <fullName>F.O.C.</fullName>
            </value>
            <value>
                <fullName>60% Advance. Balance 60 days Credit</fullName>
            </value>
            <value>
                <fullName>60% Advance. Balance 30 days Credit</fullName>
            </value>
            <value>
                <fullName>LC@Sight</fullName>
            </value>
            <value>
                <fullName>20% Payment to reserve and confirm the order</fullName>
            </value>
            <value>
                <fullName>LC@ 90 days credit</fullName>
            </value>
            <value>
                <fullName>TT</fullName>
            </value>
            <value>
                <fullName>0 days</fullName>
            </value>
            <value>
                <fullName>LC@ 45 Days Credit</fullName>
            </value>
            <value>
                <fullName>LC@ 30 Days Credit</fullName>
            </value>
            <value>
                <fullName>50% Advance, Balance 30 days Credit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>