force-app/main/default/objects/Quote/fields/PFPPERCENT__c.field-meta.xml
<CustomField>
    <fullName>PFPPERCENT__c</fullName>
    <label>PFP %</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>