force-app/main/default/objects/Quote/fields/price_list__c.field-meta.xml
<CustomField>
    <fullName>price_list__c</fullName>
    <label>price list</label>
    <length>255</length>
    <type>Text</type>
</CustomField>