force-app/main/default/objects/Quote/fields/Product_Manufacturing_Status__c.field-meta.xml
<CustomField>
    <fullName>Product_Manufacturing_Status__c</fullName>
    <label>Product Manufacturing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Raw Meterial</fullName>
            </value>
            <value>
                <fullName>Laser Cutting</fullName>
            </value>
            <value>
                <fullName>CNC Punching</fullName>
            </value>
            <value>
                <fullName>Bending</fullName>
            </value>
            <value>
                <fullName>Fabricating</fullName>
            </value>
            <value>
                <fullName>Arc Welding</fullName>
            </value>
            <value>
                <fullName>TIG Welding</fullName>
            </value>
            <value>
                <fullName>Grinding</fullName>
            </value>
            <value>
                <fullName>Finishing</fullName>
            </value>
            <value>
                <fullName>Filling</fullName>
            </value>
            <value>
                <fullName>Sanding</fullName>
            </value>
            <value>
                <fullName>Powder Coating</fullName>
            </value>
            <value>
                <fullName>Hot Dip Galvanize</fullName>
            </value>
            <value>
                <fullName>Ovening</fullName>
            </value>
            <value>
                <fullName>Assembing</fullName>
            </value>
            <value>
                <fullName>Finish Good</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>