force-app/main/default/objects/Quote/fields/Product_Price_With_Discount__c.field-meta.xml
<CustomField>
    <fullName>Product_Price_With_Discount__c</fullName>
    <formula>Products_Price_with_Quantity__c - Discounted_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Price With Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>