force-app/main/default/objects/Quote/fields/Products_Price_with_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Products_Price_with_Quantity__c</fullName>
    <label>Products Price with Quantity</label>
    <summarizedField>QuoteLineItem.Final_Bundle_Price_with_Quantity__c</summarizedField>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>