force-app/main/default/objects/Quote/fields/Project_Type__c.field-meta.xml
<CustomField>
    <fullName>Project_Type__c</fullName>
    <label>Project Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wired</fullName>
            </value>
            <value>
                <fullName>Non-Wired</fullName>
            </value>
            <value>
                <fullName>Bed Head</fullName>
            </value>
            <value>
                <fullName>Cable Management</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
            <value>
                <fullName>Lighting &amp; Automation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>