force-app/main/default/objects/Quote/fields/Quote_vise_Notes__c.field-meta.xml
<CustomField>
    <fullName>Quote_vise_Notes__c</fullName>
    <label>Quote vise Notes</label>
    <length>90000</length>
    <type>LongTextArea</type>
</CustomField>