force-app/main/default/objects/Quote/fields/Rep_Discount__c.field-meta.xml
<CustomField>
    <fullName>Rep_Discount__c</fullName>
    <label>Rep Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>