force-app/main/default/objects/Quote/fields/Rep_Validity__c.field-meta.xml
<CustomField>
    <fullName>Rep_Validity__c</fullName>
    <label>Rep. Validity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>7 Days</fullName>
            </value>
            <value>
                <fullName>14 Days</fullName>
            </value>
            <value>
                <fullName>21 Days</fullName>
            </value>
            <value>
                <fullName>30 Days</fullName>
            </value>
            <value>
                <fullName>45 Days</fullName>
            </value>
            <value>
                <fullName>60 Days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>